--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .nav {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
 }
-.App {
-  @media (min-width: 400px) {
-    display: none;
-  }
+
+html {
+  scroll-behavior: smooth;
+  background-color: #0a192f;
 }
