--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,59 @@
   top: 0;
   z-index: 2;
 }
+
 .App {
-  background-color: #0a192f;
+  background-color: #10101a;
 }
 
 html {
   scroll-behavior: smooth;
-  background-color: #0a192f;
+  background-color: #10101a;
+}
+
+.header {
+  color: #fff;
+  font-weight: 800;
+  font-size: 30px;
+}
+.animateText {
+  font-weight: 800;
+  background: #000;
+  -webkit-text-fill-color: transparent;
+  color: #fff;
+  animation: colors 10s linear infinite;
+}
+@keyframes colors {
+  0% {
+    background: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+    -webkit-background-clip: text;
+  }
+
+  25% {
+    background: linear-gradient(225deg, #ff3cac 0%, #784ba0 50%, #2b86c5 100%);
+    -webkit-background-clip: text;
+  }
+  50% {
+    background: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
+    -webkit-background-clip: text;
+  }
+
+  75% {
+    background: linear-gradient(to right, #e96443, #904e95);
+    -webkit-background-clip: text;
+  }
+  100% {
+    background: linear-gradient(
+      109.6deg,
+      rgba(61, 245, 167, 1) 11.2%,
+      rgba(9, 111, 224, 1) 91.1%
+    );
+    -webkit-background-clip: text;
+  }
+}
+
+@media (max-width: 600px) {
+  .header {
+    font-size: 20px;
+  }
 }
