--- a/src/App.css
+++ b/src/App.css
@@ -53,9 +53,16 @@ html {
     -webkit-background-clip: text;
   }
 }
-
+.subtext {
+  padding: 0px 20px;
+  text-align: center;
+  color: #8892b0;
+}
 @media (max-width: 600px) {
   .header {
     font-size: 20px;
+  }
+  .subtext p {
+    font-size: 12px;
   }
 }
