--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 body {
   background-color: #10101a;
+  font-family: "Poppins", sans-serif;
 }
 
 .socket {
