--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url(https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap);
+@import url(https://fonts.googleapis.com/css2?family=Inter&display=swap);
+
 .nav {
   position: sticky;
   top: 0;
@@ -6,6 +9,7 @@
 
 .App {
   background-color: #10101a;
+  font-family: "Inter", sans-serif;
 }
 
 html {
@@ -14,10 +18,25 @@ html {
 }
 
 .header {
+  font-family: "Space Grotesk", sans-serif;
   color: #fff;
   font-weight: 800;
   font-size: 30px;
 }
+.contactbtn {
+  padding: 12px;
+  width: 270px;
+  height: 50px;
+  color: #64ffda;
+  background-color: transparent;
+  border: 1px solid #64ffda;
+  border-radius: 2px;
+  cursor: pointer;
+}
+.contactbtn:hover {
+  background-color: rgb(100, 255, 218, 0.3);
+}
+
 .animateText {
   font-weight: 800;
   background: #000;
@@ -57,6 +76,7 @@ html {
   padding: 0px 20px;
   text-align: center;
   color: #8892b0;
+  margin-bottom: 100px;
 }
 @media (max-width: 600px) {
   .header {
@@ -64,5 +84,8 @@ html {
   }
   .subtext p {
     font-size: 12px;
+  }
+  .contactbtn {
+    width: 90%;
   }
 }
